Fixed overlapping event cards

--- a/sass/theme/blocks/cards/_event-card.scss
+++ b/sass/theme/blocks/cards/_event-card.scss
@@ -1,3 +1,12 @@
+.iee_archive {
+	display: flex;
+	flex-direction: column;
+
+	@include respond-to("lg") {
+		flex-direction: row;
+	}
+}
+
 .iee_archive .archive-event .iee_event {
 	height:  300px;
 }
